[gd_scene load_steps=10 format=3 uid="uid://l67jcjvhtjti"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_igoyf"]
[ext_resource type="Texture2D" uid="uid://dpbsn2eh10l62" path="res://art/hoompert/Hoompert Vector@3x.png" id="2_ntki8"]
[ext_resource type="Texture2D" uid="uid://c5rduqjjuvuq6" path="res://art/hoompert/Cursor.png" id="3_t5uol"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7ob3f"]
radius = 36.0555

[sub_resource type="CircleShape2D" id="CircleShape2D_l2wv8"]
radius = 599.552

[sub_resource type="Animation" id="Animation_s54ui"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ntki8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1.19209e-07, 1.05879e-22)]
}

[sub_resource type="Animation" id="Animation_c6iap"]
resource_name = "basic"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-1.19209e-07, 1.05879e-22), Vector2(-2, 0), Vector2(1, 0)]
}

[sub_resource type="Animation" id="Animation_pgu37"]
resource_name = "death"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_stqx8"]
_data = {
"RESET": SubResource("Animation_s54ui"),
"basic": SubResource("Animation_c6iap"),
"death": SubResource("Animation_pgu37")
}

[node name="player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(0.84, 0.84)
collision_layer = 2
input_pickable = true
script = ExtResource("1_igoyf")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(-1.19209e-07, 1.05879e-22)
scale = Vector2(0.08, 0.08)
texture = ExtResource("2_ntki8")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7ob3f")

[node name="mouseDetection" type="Area2D" parent="."]
scale = Vector2(0.279999, 0.279999)

[node name="MouseCollision" type="CollisionShape2D" parent="mouseDetection"]
shape = SubResource("CircleShape2D_l2wv8")

[node name="mouseTracker" type="Sprite2D" parent="."]
rotation = -0.785398
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_t5uol")

[node name="PlayerCam" type="Camera2D" parent="."]
zoom = Vector2(0.8, 0.8)
process_callback = 0
position_smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_stqx8")
}

[connection signal="mouse_entered" from="mouseDetection" to="." method="_on_mouse_detection_mouse_entered"]
[connection signal="mouse_exited" from="mouseDetection" to="." method="_on_mouse_detection_mouse_exited"]
